--- a/work/first/index.html
+++ b/work/first/index.html
@@ -1,84 +1,120 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<meta name="format-detection" content="telephone=no">
-<title>jQuery</title>
-<link rel="stylesheet" href="../../common/css/reset.css">
-<link rel="stylesheet" href="../../common/css/base.css">
-<link rel="stylesheet" href="./css/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="title" content="Bolt - Free Bootstrap 3 Theme">
+  <meta name="description" content="This is my portfolio site.">
+  <meta name="keywords" content="bolt, bootstrap, portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="wrapper">
-  <h1 class="title">jQuery</h1>
-  <h2 class="sub-title">Q1</h2>
-  <div class="question">
-    <div class="btn" id="q1">Q1</div>
-  </div>
-  <h2 class="sub-title">Q2</h2>
-  <div class="question">
-    <div class="btn" id="q2">Q2</div>
-  </div>
-  <h2 class="sub-title">Q3</h2>
-  <div class="question">
-    <div class="btn" id="q3">Q3</div>
-  </div>
-  <h2 class="sub-title">Q4</h2>
-  <div class="question">
-    <div class="btn" id="q4">Q4</div>
-  </div>
-  <h2 class="sub-title">Q5</h2>
-  <div class="question">
-    <div class="btn" id="q5">Q5</div>
-  </div>
-  <h2 class="sub-title">Q6</h2>
-  <div class="question">
-    <div class="btn" id="q6">Q6</div>
-  </div>
-  <h2 class="sub-title">Q7</h2>
-  <div class="question">
-    <ul class="list" id="q7">
-      <li>Q7-1</li>
-      <li>Q7-2</li>
-      <li>Q7-3</li>
-      <li>Q7-4</li>
-    </ul>
-  </div>
-  <h2 class="sub-title">Q8</h2>
-  <div class="question">
-    <div class="btn" id="q8">Q8</div>
-  </div>
-  <h2 class="sub-title">Q9</h2>
-  <div class="question">
-    <div class="btn" id="q9" data-text="jQuery">Q9</div>
-  </div>
-  <h2 class="sub-title">Q10</h2>
-  <div class="question">
-    <ul class="list" id="q10">
-      <li>Q10-1</li>
-      <li>Q10-2</li>
-      <li>Q10-3</li>
-    </ul>
-    <ul class="list" id="q11">
-      <li>Q11-1</li>
-      <li>Q11-2</li>
-      <li>Q11-3</li>
-    </ul>
-  </div>
-</div>
-<script src="../../common/js/jquery.js"></script>
-<script>
-// 第1問  id='q1'の要素の文字色を赤色にせよ。
-// 第2問  id='q2'の要素をクリックしたら背景色をピンクにせよ。
-// 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
-// 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
-// 第5問  id='q5'の要素をクリックしたらこの要素にlargeというクラスを付与せよ。
-// 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
-// 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
-// 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
-// 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
-// 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
-</script>
+  <header>
+    <div class="inner header-inner">
+      <div class="header-content header_icon">
+        <i class="fas fa-bolt fa-2x isgray"></i>
+      </div>
+      <div class="header-content contact_button">
+        <a href="" class="button_message">Contact</a>
+      </div>
+      <div class="header-content humbuger_button">
+        <a href=""><i class="fas fa-bars fa-2x isgray"></i></a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="inner theme">
+      <h1 class="theme_text center">Bolt Theme</h1>
+      <p class="subtheme_text center">FREE BOOTSTRAP THEMES</p>
+    </div>
+    <section class="themecolor_BG">
+      <div class="inner section_inner">
+        <div class="leftbox">
+          <img src="img/iphone.png" alt="iphone image" class="phone_image">
+        </div>
+        <div class="rightbox">
+          <h2 class="section_title center">WHAT WE CAN DO?</h2>
+          <p class="section_text center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </div>
+      </div>
+    </section>
+    <article>
+      <div class="article_inner inner">
+        <div class="article_title">
+          <h2 class="article_title_text">OUR LATEST WORK</h2>
+        </div>
+        <div class="works">
+          <a href="" class="work_img"><img src="img/01.jpg" alt=""></a>
+          <a href="" class="work_img"><img src="img/02.jpg" alt=""></a>
+          <a href="" class="work_img"><img src="img/03.jpg" alt=""></a>
+          <a href="" class="work_img"><img src="img/04.jpg" alt=""></a>
+          <a href="" class="work_img"><img src="img/05.jpg" alt=""></a>
+          <a href="" class="work_img"><img src="img/06.jpg" alt=""></a>
+        </div>
+        <div class="work_description">
+          <div class="work_text_box">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever.
+            </p>
+          </div>
+          <div class="email_button">
+            <a href="" class="email_button_message">Email Me!</a>
+          </div>
+        </div>
+      </div>
+    </article>
+    <section class="darkgray_BG">
+      <div class="ourskills_inner inner">
+        <h2 class="white_title_text">OUR SKILLS</h2>
+        <div class="skills_container">
+          <div class="skill">
+            <img src="img/circle_01.png" alt="">
+            <p>JavaScript</p>
+          </div>
+          <div class="skill">
+            <img src="img/circle_02.png" alt="">
+            <p>bootstrap</p>
+          </div>
+          <div class="skill">
+            <img src="img/circle_03.png" alt="">
+            <p>WordPress</p>
+          </div>
+          <div class="skill">
+            <img src="img/circle_04.png" alt="">
+            <p>Photoshop</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <nav>
+      <div class="nav_inner inner">
+        <div class="sns_icons">
+          <a class="sns_icon" href="">
+            <i class="fab fa-facebook-f fa-4x isthemecolor"></i>
+          </a>
+          <a class="sns_icon" href="">
+            <i class="fas fa-basketball-ball fa-4x isthemecolor"></i>
+          </a>
+          <a class="sns_icon" href="">
+            <i class="fab fa-twitter fa-4x isthemecolor"></i>
+          </a>
+          <a class="sns_icon" href="">
+            <i class="fas fa-envelope fa-4x isthemecolor"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
+  </main>
+  <footer class="themecolor_BG">
+    <div class="footer_inner inner">
+      <p class="footer_white_text">Crafrted with♥by BlackTie.co.</p>
+    </div>
+  </footer>
 </body>
 </html>
