--- a/work/first/index.html
+++ b/work/first/index.html
@@ -1,120 +1,144 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
-  <meta name="title" content="Bolt - Free Bootstrap 3 Theme">
-  <meta name="description" content="This is my portfolio site.">
-  <meta name="keywords" content="bolt, bootstrap, portfolio">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/style.css">
+  <title>jQuery</title>
+  <link rel="stylesheet" href="../../common/css/reset.css">
+  <link rel="stylesheet" href="../../common/css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <header>
-    <div class="inner header-inner">
-      <div class="header-content header_icon">
-        <i class="fas fa-bolt fa-2x isgray"></i>
-      </div>
-      <div class="header-content contact_button">
-        <a href="" class="button_message">Contact</a>
-      </div>
-      <div class="header-content humbuger_button">
-        <a href=""><i class="fas fa-bars fa-2x isgray"></i></a>
-      </div>
+  <div class="wrapper">
+    <h1 class="title">jQuery</h1>
+    <h2 class="sub-title">Q1</h2>
+    <div class="question">
+      <div class="btn" id="q1">Q1</div>
     </div>
-  </header>
-  <main>
-    <div class="inner theme">
-      <h1 class="theme_text center">Bolt Theme</h1>
-      <p class="subtheme_text center">FREE BOOTSTRAP THEMES</p>
+    <h2 class="sub-title">Q2</h2>
+    <div class="question">
+      <div class="btn" id="q2">Q2</div>
     </div>
-    <section class="themecolor_BG">
-      <div class="inner section_inner">
-        <div class="leftbox">
-          <img src="img/iphone.png" alt="iphone image" class="phone_image">
-        </div>
-        <div class="rightbox">
-          <h2 class="section_title center">WHAT WE CAN DO?</h2>
-          <p class="section_text center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </div>
-      </div>
-    </section>
-    <article>
-      <div class="article_inner inner">
-        <div class="article_title">
-          <h2 class="article_title_text">OUR LATEST WORK</h2>
-        </div>
-        <div class="works">
-          <a href="" class="work_img"><img src="img/01.jpg" alt=""></a>
-          <a href="" class="work_img"><img src="img/02.jpg" alt=""></a>
-          <a href="" class="work_img"><img src="img/03.jpg" alt=""></a>
-          <a href="" class="work_img"><img src="img/04.jpg" alt=""></a>
-          <a href="" class="work_img"><img src="img/05.jpg" alt=""></a>
-          <a href="" class="work_img"><img src="img/06.jpg" alt=""></a>
-        </div>
-        <div class="work_description">
-          <div class="work_text_box">
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-              Lorem Ipsum has been the industry's standard dummy text ever.
-            </p>
-          </div>
-          <div class="email_button">
-            <a href="" class="email_button_message">Email Me!</a>
-          </div>
-        </div>
-      </div>
-    </article>
-    <section class="darkgray_BG">
-      <div class="ourskills_inner inner">
-        <h2 class="white_title_text">OUR SKILLS</h2>
-        <div class="skills_container">
-          <div class="skill">
-            <img src="img/circle_01.png" alt="">
-            <p>JavaScript</p>
-          </div>
-          <div class="skill">
-            <img src="img/circle_02.png" alt="">
-            <p>bootstrap</p>
-          </div>
-          <div class="skill">
-            <img src="img/circle_03.png" alt="">
-            <p>WordPress</p>
-          </div>
-          <div class="skill">
-            <img src="img/circle_04.png" alt="">
-            <p>Photoshop</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <nav>
-      <div class="nav_inner inner">
-        <div class="sns_icons">
-          <a class="sns_icon" href="">
-            <i class="fab fa-facebook-f fa-4x isthemecolor"></i>
-          </a>
-          <a class="sns_icon" href="">
-            <i class="fas fa-basketball-ball fa-4x isthemecolor"></i>
-          </a>
-          <a class="sns_icon" href="">
-            <i class="fab fa-twitter fa-4x isthemecolor"></i>
-          </a>
-          <a class="sns_icon" href="">
-            <i class="fas fa-envelope fa-4x isthemecolor"></i>
-          </a>
-        </div>
-      </div>
-    </nav>
-  </main>
-  <footer class="themecolor_BG">
-    <div class="footer_inner inner">
-      <p class="footer_white_text">Crafrted with♥by BlackTie.co.</p>
+    <h2 class="sub-title">Q3</h2>
+    <div class="question">
+      <div class="btn" id="q3">Q3</div>
     </div>
-  </footer>
+    <h2 class="sub-title">Q4</h2>
+    <div class="question">
+      <div class="btn" id="q4">Q4</div>
+    </div>
+    <h2 class="sub-title">Q5</h2>
+    <div class="question">
+      <div class="btn" id="q5">Q5</div>
+    </div>
+    <h2 class="sub-title">Q6</h2>
+    <div class="question">
+      <div class="btn" id="q6">Q6</div>
+    </div>
+    <h2 class="sub-title">Q7</h2>
+    <div class="question">
+      <ul class="list" id="q7">
+        <li>Q7-1</li>
+        <li>Q7-2</li>
+        <li>Q7-3</li>
+        <li>Q7-4</li>
+      </ul>
+    </div>
+    <h2 class="sub-title">Q8</h2>
+    <div class="question">
+      <div class="btn" id="q8">Q8</div>
+    </div>
+    <h2 class="sub-title">Q9</h2>
+    <div class="question">
+      <!-- データ属性に"jQuery"を指定 -->
+      <div class="btn" id="q9" data-text="jQuery">Q9</div>
+    </div>
+    <h2 class="sub-title">Q10</h2>
+    <div class="question">
+      <ul class="list" id="q10">
+        <li>Q10-1</li>
+        <li>Q10-2</li>
+        <li>Q10-3</li>
+      </ul>
+      <ul class="list" id="q11">
+        <li>Q11-1</li>
+        <li>Q11-2</li>
+        <li>Q11-3</li>
+      </ul>
+    </div>
+  </div>
+  <script src="../../common/js/jquery.js"></script>
+  <script>
+  $(function () {
+
+    // 第1問  id='q1'の要素の文字色を赤色にせよ。
+    $('#q1').css('color', 'red');//id='q1'にcolor: red; のスタイルを適応
+
+    // 第2問  id='q2'の要素をクリックしたら背景色をピンクにせよ。
+    $('#q2').click(function () { //id='q1'クリックしたときのfunction ()
+    $(this).css('background-color', 'pink');//現在のDOM(id='q1')にbackground-color:pink;を適応
+  });
+
+  // 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
+  $('#q3').click(fadeout); //id='q3'の要素をクリックしたらfadeoutメソッドを実行
+
+  function fadeout() { //fadeoutメソッド
+    $(this).fadeOut(2000); //現在のDOMを2000ミリ秒かけて消す
+  }
+
+  // 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
+  $('#q4').click(function () {//id='q4'の要素をクリックしたらfunctionを実行
+    $(this).prepend('DOMの中の前')//
+    .append('DOMの中の後')//
+    .before('DOMの前')//
+    .after('DOMの後')//
+  });
+
+
+  // 第5問  id='q5'の要素をクリックしたらこの要素にlargeというクラスを付与せよ。
+  $('#q5').click(function () {//id='q5'の要素をクリックしたらfunctionを実行
+    $(this).addClass('large');//現在のDOMにクラスlargeを追加
+  });
+
+  // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
+  $('#q6').click(function () {//id='q6'の要素をクリックしたらfunctionを実行
+    $(this).animate({//animateメソッドは第1引数のスタイルを第2引数ミリ秒かけて実行
+      'marginTop': 100,
+      'marginLeft': 100
+    }, 2000);//2000ミリ秒かけてcssの適応
+  });
+
+  // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
+  $('#q7').find('li').click(function () {
+    //id='q7'の要素の小要素'li'をクリックしたらクリックした'li'に対してfunctionを実行
+    var indexNum = $(this).index();//クリックした要素のindex(位置番号)を取得し、indexNumに代入
+    console.log(indexNum);//indexNumをコンソール出力
+    alert(indexNum);//スペルミス注意！, indexNumをアラート
+  });
+
+
+  // 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
+  $('#q8').hover(function() {
+    //hover()は引数2つの場合、hoverしているときは第1引数実行、hoverしてないときは第2引数実行
+    $(this).addClass('large');//クリックしたDOMにクラス'large'を追加
+  }, function() {
+    $(this).removeClass('large');//クリックしたDOMからクラス'large'を削除
+  });
+
+  // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
+  $('#q9').click(function() {//クリックアクション
+    console.log($(this).data('text'));//クリックしたDOMのdata属性'text'をコンソール出力
+  });
+
+  // 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
+  $('#q10').find('li').click(function() {//q10の小要素liをクリックした時
+    var childnum = $(this).index();//childnumに要素番号を代入して
+    $('#q11').find('li').eq(childnum).addClass('large');//q11のchildnum+1番目の要素にクラスlargeを追加
+  });
+
+
+})
+</script>
 </body>
 </html>
