--- a/work/second/index.html
+++ b/work/second/index.html
@@ -21,14 +21,21 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
-    $()
+    $(function() {
       // 今回やるのはモーダルです。
       // .modal-show をクリックすることで .modal をfadeInさせる。
-
+      $('.modal-show').click(function() {//modal-showクラスのクリックアクション
+        $('.modal').fadeIn('slow');//.modalをゆっくりとfadeIn
+      });
       // .modal-close をクリックで .modal をfadeOutさせる。
+      $('.modal-close').click(function() {//modal-closeクラスのクリックアクション
+        $('.modal').fadeOut('slow');//.modalをゆっくりとfadeOut
+      });
       // .click() クリック時のイベントを登録する。
       // .fadeIn() 一定時間かけてフェードインする。
       // .fadeOut() 一定時間かけてフェードアウトする。
+
+    })
     </script>
   </body>
 </html>
