--- a/work/third/index.html
+++ b/work/third/index.html
@@ -24,13 +24,20 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+    $(function() {
       // 今回やるのはタブメニューです。
       // navの小要素であるliをクリックして、contents内の小要素であるli要素を表示させる。
+      $('.nav').find('li').click(function() {//navの小要素liのクリックアクションでfunction()実行
+        var indexNum = $(this).index();//indexNumにliの位置番号を代入
+        $('.contents').find('li').eq(indexNum).siblings().addClass('is-hidden');//contents内のliのindexNum-1番目以外にis-hiddenクラスを追加
+        $('.contents').find('li').eq(indexNum).removeClass('is-hidden');//contents内のliのindexNum-1番目のis-hiddenクラスを削除
+      });
       // .index() 要素のindexを取得します。
       // .eq() 引数に応じたindexの要素を指定します。
       // .addClass() クラスを追加します。
       // .removeClass() クラスを削除します。
+
+    })
     </script>
   </body>
 </html>
-
