--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -47,6 +47,7 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+    $(function() {
       // 今回やるのはドロップメニューです。
       // メニューをhoverすると隠れている中のメニューが表示され、メニューから離れると中のメニューが非表示されるプログラムです。
       // [使用するメソッド]
@@ -56,6 +57,16 @@
       // .next() 要素の隣の要素を取得します。これは使わなくてもできます。
       // .children() 要素の子要素を取得します。
       // .stop() 現在動作中のアニメーション処理を全て中止します。
+
+      $('.menu__list__title').hover(function(){//'.menu__list__title'にhoverした時のfunction
+        $(this).next().stop();//次の要素'menu__list__childList'のアニメーションを中止
+        $(this).next().slideDown();//次の要素'menu__list__childList'をslideDown
+      },function(){
+        $(this).next().stop();//次の要素'menu__list__childList'のアニメーションを中止
+        $(this).next().slideUp();//次の要素'menu__list__childList'のアニメーションをslideUp
+      });
+
+    })
     </script>
   </body>
 </html>
