--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -58,12 +58,10 @@
       // .children() 要素の子要素を取得します。
       // .stop() 現在動作中のアニメーション処理を全て中止します。
 
-      $('.menu__list__title').hover(function(){//'.menu__list__title'にhoverした時のfunction
-        $(this).next().stop();//次の要素'menu__list__childList'のアニメーションを中止
-        $(this).next().slideDown();//次の要素'menu__list__childList'をslideDown
+      $('.menu__list').children('li').hover(function(){//'.menu__list__title'にhoverした時のfunction
+        $(this).children('ul').stop().slideDown();//次の要素'menu__list__childList'をslideDown
       },function(){
-        $(this).next().stop();//次の要素'menu__list__childList'のアニメーションを中止
-        $(this).next().slideUp();//次の要素'menu__list__childList'のアニメーションをslideUp
+        $(this).children('ul').stop().slideUp();//次の要素'menu__list__childList'のアニメーションをslideUp
       });
 
     })
