--- a/work/seventh/index.html
+++ b/work/seventh/index.html
@@ -26,6 +26,7 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+    $(function() {
       // 今回やるのはスライドショーです。
       // 右方向には右のボタンを押すと移動し、左方向には左のボタンを押すと移動する。また右端にいる状態で右のボタンを押すと最初の位置に戻り、 左端にいる状態で左のボタンを押すと最後の位置に移動する。data属性にprev,nextを記述してあるのでこちらを取得すると楽です。
       // 位置情報は配列に格納しておき、右のボタンをクリックするたびに配列の添字を1追加し、左のボタンをクリックすると配列の添字を1減らします。そうすることによって次の座標が取得できます。その座標にアニメーションさせるととても楽です。
@@ -34,6 +35,42 @@
       // .data() 要素のdata属性を取得します。
       // .width() 要素の幅を取得します。
       // .length 要素の個数を取得します。
+
+      var howlongleft = [];
+      var imgli = $('.slider-list').find('li');
+      var num = 0;
+      var isSliding = false;
+      imgli.each(function() {
+        if(num === 0)howlongleft.push(0);
+        else howlongleft.push(howlongleft[num-1] - $(this).width());
+        num++;
+      });
+      num = 0;
+
+      console.log(howlongleft);
+
+      $('.is-next').click(function() {
+        if(isSliding) return;
+        num++;
+        if(num>=howlongleft.length)num=0;
+        changeimgpos(howlongleft[num]);
+      })
+
+      $('.is-prev').click(function() {
+        if(isSliding) return;
+        num--;
+        if(num<0)num=howlongleft.length-1;
+        changeimgpos(howlongleft[num]);
+      })
+
+      function changeimgpos(toleft){
+        isSliding = true;
+        $('.slider-list').animate({'left': toleft}, 500, 'swing', function() {
+          isSliding = false;
+        });
+      }
+
+    })
     </script>
   </body>
 </html>
