--- a/work/ninth/index.html
+++ b/work/ninth/index.html
@@ -43,8 +43,22 @@
       // </li>
       //
       // このテンプレートに取得してきた中身を入れて表示します。
-
-    })
+      $.ajax({//ajax開始
+        url: './data.json'//ファイル読み込み
+      })
+      .done(function(data) {//ファイル読み込み完了したら
+        $.each(data.colorsArray, function(index, elem){//dataの中の配列colorsArrayの中身それぞれに対して
+          var $innerItem = $("<p>", {//pタグ生成
+            class: "colorList__title"//クラス追加
+          });
+          var $outerItem = $("<li>", {//liタグ生成
+            class: "colorList__item"//クラス追加
+          });
+          $innerItem.css('background-color', elem.hexValue).text(elem.colorName).appendTo($outerItem);//innerItemのスタイルbackground-colorに配列要素のhexvalueを設定、テキストは配列要素のcolornameにして、outerItemの小要素として追加。
+          $('.colorList').append($outerItem);//.colorListにouterItemを小要素として追加
+        });
+      });
+    });
     </script>
   </body>
 </html>
