tenthのテンプレート作成部分の体裁を整えました

--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -121,7 +121,16 @@
 
       $.each(books, function(index, el) {//本情報のオブジェクトの配列の要素elそれぞれにたいして
         var item = el.Item;//data.Items.Itemが本の情報なのでそれをitemに格納
-        var $BookDOM = $("<li class='lists__item'><div class='lists__item__inner'><a href='" + item.itemUrl + "' class='lists__item__link' target='_blank'><img src='" + item.largeImageUrl + "' class='lists__item__img' alt=''><p class='lists__item__detail'>作品名：　" + item.title + "</p><p class='lists__item__detail'>作者　：　" + item.author + "</p><p class='lists__item__detail'>出版社：　" + item.publisherName + "</p></a></div></li>");
+        var $BookDOM = $("<li class='lists__item'><div class='lists__item__inner'>" +
+                          "<div class='lists__item__inner'>" +
+                            "<a href='" + item.itemUrl + "' class='lists__item__link' target='_blank'>" +
+                                "<img src='" + item.largeImageUrl + "' class='lists__item__img' alt=''>" +
+                                "<p class='lists__item__detail'>作品名：　" + item.title + "</p>" +
+                                "<p class='lists__item__detail'>作者　：　" + item.author + "</p>" +
+                                "<p class='lists__item__detail'>出版社：　" + item.publisherName + "</p>" +
+                            "</a>" +
+                          "</div>" +
+                        "</li>");
 
         $('.lists').prepend($BookDOM);//新しく取得した本の情報liを前に追加していく
       });
